<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.7.18</version>
    <relativePath/>
  </parent>

  <groupId>com.sok</groupId>
  <artifactId>spring-backend</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>spring-backend</name>
  <description>Sword Of Knowledge Spring backend</description>

  <properties>
    <java.version>17</java.version>
    <pekko.version>1.0.2</pekko.version>
    <pekko.http.version>1.0.1</pekko.http.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-jdbc</artifactId>
    </dependency>
    <dependency>
      <groupId>org.flywaydb</groupId>
      <artifactId>flyway-core</artifactId>
    </dependency>
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>
    <dependency>
      <groupId>io.micrometer</groupId>
      <artifactId>micrometer-registry-prometheus</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.pekko</groupId>
      <artifactId>pekko-actor-typed_2.13</artifactId>
      <version>${pekko.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.pekko</groupId>
      <artifactId>pekko-stream_2.13</artifactId>
      <version>${pekko.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.pekko</groupId>
      <artifactId>pekko-stream-typed_2.13</artifactId>
      <version>${pekko.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.pekko</groupId>
      <artifactId>pekko-cluster-typed_2.13</artifactId>
      <version>${pekko.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.pekko</groupId>
      <artifactId>pekko-cluster-sharding-typed_2.13</artifactId>
      <version>${pekko.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.pekko</groupId>
      <artifactId>pekko-serialization-jackson_2.13</artifactId>
      <version>${pekko.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.pekko</groupId>
      <artifactId>pekko-http_2.13</artifactId>
      <version>${pekko.http.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.pekko</groupId>
      <artifactId>pekko-http-jackson_2.13</artifactId>
      <version>${pekko.http.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.pekko</groupId>
      <artifactId>pekko-slf4j_2.13</artifactId>
      <version>${pekko.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>
</project>
